--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -15,7 +15,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="美食烘培店"
+        android:text=""
         android:textSize="17sp"
         android:textStyle="bold"
         android:layout_marginLeft="10dp"
@@ -28,7 +28,7 @@
         android:id="@+id/tv_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10分"
+        android:text=""
         android:textSize="12sp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="15dp"
@@ -54,6 +54,7 @@
         android:text=""
         android:layout_marginTop="4dp"
         android:textSize="12sp"
+        android:visibility="gone"
         android:layout_marginLeft="10dp"
         android:textColor="@color/color_7C7877"
         android:layout_below="@+id/tv_title"
@@ -65,7 +66,7 @@
         android:text=""
         android:layout_marginTop="4dp"
         android:textSize="12sp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="6dp"
         android:textColor="@color/color_7C7877"
         android:layout_below="@+id/tv_title"
         android:layout_toRightOf="@+id/tv_time"/>
