--- a/app/src/main/res/layout/item_store_food.xml
+++ b/app/src/main/res/layout/item_store_food.xml
@@ -41,7 +41,9 @@
         android:id="@+id/iv_goods_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="来自地道台湾大师"
+        android:text=""
+        android:maxLines="2"
+        android:ellipsize="end"
         android:textColor="@color/color_7B7777"
         android:textSize="12sp"
         android:layout_below="@+id/iv_goods_name"
@@ -51,7 +53,7 @@
         android:id="@+id/iv_goods_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="剩余100份  月售2000"
+        android:text=""
         android:textColor="@color/color_7B7777"
         android:textSize="12sp"
         android:layout_alignLeft="@+id/iv_goods_name"
@@ -61,7 +63,7 @@
         android:id="@+id/iv_goods_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¥10"
+        android:text=""
         android:textColor="@color/color_FF4F4F"
         android:textSize="12sp"
         android:layout_alignBottom="@+id/iv_goods_img"
@@ -73,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:text="¥10"
+        android:text=""
         android:textColor="@color/color_ccc"
         android:textSize="11sp"
         android:textStyle="bold"
