--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,7 +36,7 @@
     <color name="color_B77A5C">#B77A5C</color>
 
     <color name="color_111111">#111111</color>
-
+    <color name="color_FF0101">#FF0101</color>
     <color name="color_FF5050">#FF5050</color>
     <color name="color_FF6300">#FF6300</color>
     <color name="color_FF6400">#FF6400</color>
