--- a/app/src/main/res/layout/activity_food2.xml
+++ b/app/src/main/res/layout/activity_food2.xml
@@ -9,7 +9,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/color_F5F5F5">
 
 
         <androidx.core.widget.NestedScrollView
@@ -28,12 +28,6 @@
                 <include layout="@layout/head_activity_food_comment" />
 
                 <include layout="@layout/head_activity_food_comment2" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                 <include layout="@layout/bottom_food_list" />
             </LinearLayout>
