--- a/app/src/main/res/layout/bottom_food_list.xml
+++ b/app/src/main/res/layout/bottom_food_list.xml
@@ -3,18 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/ll_foot"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/bg_round10dp_white"
     android:orientation="vertical">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@color/color_F5F5F5"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="17sp"
         android:textColor="@color/color_282626"
         android:textStyle="bold"
-        android:paddingTop="20dp"
+        android:paddingTop="10dp"
         android:paddingBottom="20dp"
         android:paddingLeft="10dp"
         android:text="商品详情"/>
