--- a/app/src/main/res/layout/head_fragment_chart_nodata.xml
+++ b/app/src/main/res/layout/head_fragment_chart_nodata.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/bg_kongbai2"/>
+            android:src="@drawable/img_jiaoyijilu"/>
 
         <TextView
             android:id="@+id/tv_1"
