收藏的店铺及商品UI及逻辑加入

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -132,6 +132,9 @@
     <style name="TabTextSize" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
         <item name="android:textSize">13sp</item>
     </style>
+    <style name="TabTitleTextSize" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
+        <item name="android:textSize">18sp</item>
+    </style>
 
     <style name="MyDialogStyle">
         <item name="android:windowBackground">@android:color/transparent</item>
