--- a/app/src/main/res/layout/activity_food_by_type.xml
+++ b/app/src/main/res/layout/activity_food_by_type.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,17 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
-
-
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:minHeight="45dp"
+            android:background="@drawable/bg_jianbian"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <FrameLayout
+                android:id="@+id/fl_top_tabs"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_marginLeft="12dp"
@@ -36,20 +36,19 @@
 
             </FrameLayout>
 
-
-
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/ll_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/bg_gradient_white_grey"
                 app:contentInsetStart="0dp"
                 app:contentInsetStartWithNavigation="0dp"
                 app:layout_collapseMode="pin">
 
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="45dp">
 
                     <ImageButton
                         android:id="@+id/iv_back"
@@ -58,9 +57,41 @@
                         android:background="@color/transparent"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:src="@drawable/icon_back_anse"
+                        android:src="@drawable/icon_back_bai"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <LinearLayout
+                        android:id="@+id/ll_search"
+                        android:layout_width="0dp"
+                        android:layout_height="30dp"
+                        app:layout_constraintRight_toLeftOf="@+id/iv_search"
+                        app:layout_constraintLeft_toRightOf="@+id/iv_back"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:background="@drawable/bg_round100_grey"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:src="@drawable/icon_search_xiao" />
+
+                        <TextView
+                            android:id="@+id/tv_search"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="6dp"
+                            android:layout_marginRight="6dp"
+                            android:layout_weight="1"
+                            android:text="午餐"
+                            android:textColor="@color/color_CBCBCB"
+                            android:textSize="14sp" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/toolbar_title"
@@ -70,6 +101,7 @@
                         android:layout_marginRight="50dp"
                         android:ellipsize="end"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:maxLines="1"
                         android:text="@string/app_name"
                         android:textColor="@color/color_282626"
@@ -86,10 +118,33 @@
                         android:background="@color/transparent"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
+                        android:visibility="gone"
                         android:src="@drawable/icon_sousuo_anse"
+                        app:layout_constraintRight_toLeftOf="@+id/iv_chart"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageButton
+                        android:id="@+id/iv_chart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/title_bar_height"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:background="@color/transparent"
+                        android:src="@drawable/icon_toubu_gouwuche_bai"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <ImageView
+                        android:id="@+id/iv_red"
+                        android:layout_width="5dp"
+                        android:layout_height="5dp"
+                        android:layout_marginEnd="9dp"
+                        android:layout_marginTop="11dp"
+                        android:visibility="gone"
+                        android:background="@drawable/cycle"
+                        android:gravity="center"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.appcompat.widget.Toolbar>
 
