--- a/app/src/main/res/layout/dialog_store_bottom_choose.xml
+++ b/app/src/main/res/layout/dialog_store_bottom_choose.xml
@@ -10,6 +10,7 @@
 
     <include layout="@layout/item_store_food"
         android:id="@+id/item_food"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
