--- a/app/src/main/res/layout/activity_tequan.xml
+++ b/app/src/main/res/layout/activity_tequan.xml
@@ -87,6 +87,7 @@
 
 
         <TextView
+            android:id="@+id/tv_condition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
@@ -107,6 +108,7 @@
 
 
         <TextView
+            android:id="@+id/tv_equity_introduction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
