--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -97,6 +97,20 @@
                         app:layout_constraintLeft_toLeftOf="@+id/tv_name"
                         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
+                    <TextView
+                        android:id="@+id/huiyuan"
+                        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_name"
+                        android:layout_marginTop="6dp"
+                        android:gravity="right|center_vertical"
+                        android:layout_width="69dp"
+                        android:layout_height="13dp"
+                        android:paddingRight="6dp"
+                        android:text=""
+                        android:textColor="@color/white"
+                        android:textSize="10sp"
+                        android:visibility="gone"/>
+
 
                     <LinearLayout
                         android:id="@+id/ll_1"
