--- a/app/src/main/res/layout/item_tequan.xml
+++ b/app/src/main/res/layout/item_tequan.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/iv_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:scaleType="centerInside"
         android:src="@drawable/icon_chongzhi_lvfeng"/>
 
